v0.8.0:
    - Fixed !title_death_behavior setting not working anymore (issue introduced in v0.7.1).
    - Changed gamemode 3 file to gamemode 0 so that Retry still works even if the title screen is skipped with a patch.
    - Added defines to configure the sprite status bar elements globally. Now the api routine only needs to be called to overwrite the default settings.
    - Changed configure_sprite_status_bar api routine palette format so it's easier to use (palette value to pass is [8-F] instead of [0-7]).
    - Fixed Retry indicator being drawn on the title screen.
    - Added "retry_install.bat" script to automate copying the Retry files in the UberASM Tool folders.
    - Fixed switch palace message sprites getting glitched or disappearing if the sprite status bar is enabled (issue introduced in v0.7.1).
    - Fixed sprite status bar not being drawn in the intro level by default.
    - Added lives and bonus stars counters to the sprite status bar, which are disabled by default, but you can enable them in settings_global.asm or with the configure_sprite_status_bar API routine (thanks to AmperSam for the lives counter gfx).
    - Changed configure_sprite_status_bar API routine format to account for the new sprite status bar items.
    - Removed !lives_overflow_fix settings: it is now always enabled.
    - Finalized documentation (thanks to AmperSam for the huge help).

v0.7.4:
    - Fixed get_sram_variable_address api routine wrong result if it was called from a different bank.
    - Fixed Mario's walking pose being glitched sometimes after a level reload, which was introduced in v0.6.2 (thanks to mmBeefStew for reporting this).

v0.7.3:
    - Added !8x8_item_box_tile option to have an 8x8 tile instead of a 16x16 tile for the sprite status bar item box (thanks to AmperSam for the gfx).
    - Fixed game crash if patching the infinite lives hex edit after inserting Retry.

v0.7.2: