@@ -15,13 +15,6 @@
 <table>
 	<tr><th width="150">Routine</th><th>Purpose</th></tr>
 	<tr>
-		<td><code>load_title:</code></td>
-		<td>
-			Called when loading the Title Screen. It can be used to reset particular RAM addresses for a new save file (see <a href="./sram_bwram_info.html
-			">SRAM & BWRAM Info</a>).
-		</td>
-	</tr>
-	<tr>
 		<td><code>reset:</code></td>
 		<td>
 			Called when the level is reset by the retry system or when entering from the overworld. Unlike UberASM level init routine, this won't be executed during regular level transitions.
@@ -93,7 +86,7 @@
 	</tr>
 </table>
 <p>
-	All these routines are called in 8-bit A/X/Y mode and DBR is already set. Don't worry about overwriting registers, they'll be restored afterwards (except for direct page). <b>All the routines must end with <code>rts</code></b>.
+	All these routines are called in 8-bit A/X/Y mode and DBR is already set. Don't worry about overwriting registers, they'll be restored afterwards (except for direct page). <b>All the routines must end with <code>RTS</code></b>.
 </p>
 <br/>
 <center><a href="./index.html">Return to main page</a></center>
